nova_tests/negative_capability/defer_break_rejected.nv
// EXPECT_COMPILE_ERROR `break` is not allowed inside `defer` body
//
// D90 Ф.3: defer body не должно hijack scope exit. `break` в body —
// compile error.

module nova_tests.negative_capability.defer_break_rejected


fn f() -> int {
    let mut sum = 0
    for i in 0..10 {
        defer {
            break       // ❌ break в defer body
        }
        sum += i
    }
    sum
}
